[tool.poetry]
name = "DynapSEtorch"
version = "1.0.0"
description = "DynapSE neural model simulation on PyTorch."
authors = ["Fernando M. Quintana <fernando.quintana@uca.es>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.0"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
Brian2 = "^2.5.1"
sympy = "==1.4"
jupyter = "^1.0.0"
jupyterlab = "^3.5.0"
tonic = "^1.2.2"

[tool.poetry.group.dev.dependencies]
Sphinx = ">=4.0"
sphinx-book-theme = "^0.3.3"
myst-nb = "^0.17.1"
pbr = "^5.11.0"
ipywidgets = "^8.0.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
