[tool.poetry]
name = "DynapSEtorch"
version = "1.0.0"
description = "DynapSE neural model simulation on PyTorch."
authors = ["Fernando M. Quintana <fernando.quintana@uca.es>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
torch = ">=1.12.1"
numpy = [{ version = "^1.21.6", python = "~3.7"},
         { version = "^1.23.4", python = "~3.8"}]
matplotlib = [{ version = "^3.5.3", python = "~3.7"},
              { version = "^3.6.1", python = "~3.8"}]
tonic = "^1.2.2"
tensorboard = "^2.10.1"

[tool.poetry.group.dev.dependencies]
Sphinx = ">=4.0"
sphinx-book-theme = "^0.3.3"
myst-nb = "^0.17.1"
pbr = "^5.11.0"
ipywidgets = "^8.0.2"
pre-commit = "^2.20.0"
black = {extras = ["jupyter"], version = "^22.10.0"}
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
