[metadata]
name = DynapSEtorch
author = Fernando M. Quintana
author_email = fernando.quintana@uca.es
description_file = README.md
description_content_type = text/markdown
long_description_content_type = text/markdown
summary = DynapSE neural model simulation on PyTorch..
project_urls =
    Source code = https://github.com/ferqui/DynapSEtorch
    Documentation = https://dynapsetorch.readthedocs.org
license = GNU GPLv3
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Neuromorphic
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[files]
packages = DynapSEtorch